<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.taylorinsurance.ui.home.HomeFragment"
        android:label="@string/taylor_insurance"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_home_insurance"
        android:name="com.example.taylorinsurance.ui.home_insurance.HomeInsuranceFragment"
        android:label="@string/home_tips"
        tools:layout="@layout/fragment_home_insurance" />

    <fragment
        android:id="@+id/nav_auto_insurance"
        android:name="com.example.taylorinsurance.ui.auto_insurance.AutoInsuranceFragment"
        android:label="@string/auto_tips"
        tools:layout="@layout/fragment_auto_insurance" />

</navigation>