<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logo"
            android:title="@string/taylor_insurance" />

        <item
            android:id="@+id/nav_home_insurance"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_tips" />

        <item
            android:id="@+id/nav_home_insurance_quote"
            android:title="Get a Quote"/>

        <item
            android:id="@+id/nav_home_insurance_policy"
            android:title="View your Policy"/>

        <item
            android:id="@+id/nav_auto_insurance"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/auto_tips" />

        <item
            android:id="@+id/nav_auto_insurance_quote"
            android:title="Get a Quote"/>

        <item
            android:id="@+id/nav_auto_insurance_policy"
            android:title="View your Policy"/>
    </group>

</menu>