<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="420dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="381dp"
                android:layout_height="192dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:src="@drawable/companylogo4" />

            <ImageView
                android:id="@+id/ivRoof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="?attr/listPreferredItemHeight"
                android:src="@drawable/roof" />

            <TextView
                android:id="@+id/tvhousetip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/maintain_your_home"
                android:textAlignment="center"
                android:textColor="@color/taylor_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtip2"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:text="@string/hometip1"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvhousetip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/home_security_systems"
                android:textAlignment="center"
                android:textColor="@color/taylor_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtip4"
                android:layout_width="288dp"
                android:layout_height="130dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="?attr/actionBarSize"
                android:text="@string/hometip2"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="290dp"
                android:layout_height="90dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:src="@drawable/car" />

            <TextView
                android:id="@+id/tvAutoTip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="?attr/actionBarSize"
                android:text="@string/mindful_driving"
                android:textAlignment="center"
                android:textColor="@color/taylor_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtip3"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/autotip1"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvAutoTip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/anti_theft_device"
                android:textAlignment="center"
                android:textColor="@color/taylor_orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtipauto2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="?attr/actionBarSize"
                android:text="@string/autotip2"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>